--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-
+<html>
+  <head>
+    <title>
+      Vestal Science Olympiad
+    </title>
+  </head>
+  <body>
+    Vestal Science Olympiad
+  </body>
+</html>
