--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     </title>
   </head>
   <body>
-    Vestal Science Olympiad
+    <h1>Vestal Science Olympiad</h1>
+    <p>
+      Welcome to Vestal Science Olympiad!
+    </p>
   </body>
 </html>
