--- a/index.html
+++ b/index.html
@@ -2,12 +2,48 @@
   <head>
     <title>
       Vestal Science Olympiad
+    
     </title>
+    <style>
+        body {
+            background-color: lightblue;
+        }
+        .keithdumb {
+            background-color: lightblue;
+            padding: 40px;
+            margin: -8px;
+            height: 20px;
+            width: 100%;
+            color: white;
+            opacity: 1;
+            border-style: solid;
+            border-color: black;
+            position: fixed;
+            text-align: center;
+        }
+        .header {
+            opacity: 1;
+            color: white;
+            text-decoration-line: none;
+            border-style: none solid;
+            border-width: 1px;
+            padding: 15px;
+        }
+    </style>
   </head>
   <body>
+    <header class = "keithdumb">
+        <a class = "header" href = "index.html">Home</a>
+        <a class = "header" href = "team.html">Team</a>
+        <a class = "header" href = "resources.html">Resources</a>
+        <a class = "header" href = "calendar.html">Calendar</a>
+    </header>
+    <br><br><br><br><br><br>
     <h1>Vestal Science Olympiad</h1>
     <p>
       Welcome to Vestal Science Olympiad!
     </p>
+    
+
   </body>
 </html>
