--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     </title>
     <style>
         body {
-            background-color: lightblue;
+            background-color: #03a406;
         }
-        .keithdumb {
-            background-color: lightblue;
+        .bar {
+            background-color: #FFD700;
             padding: 40px;
             margin: -8px;
             height: 20px;
@@ -23,24 +23,36 @@
         }
         .header {
             opacity: 1;
-            color: white;
+            color: black;
             text-decoration-line: none;
             border-style: none solid;
-            border-width: 1px;
             padding: 15px;
+            transition: 1s all ease;
+        }
+        .header:hover {
+            color: green;
+            transition: 1s all ease;
+        }
+        .body {
+            text-align: center;
+        }
+        h1 {
+            text-align: center;
         }
     </style>
   </head>
   <body>
-    <header class = "keithdumb">
+    <header class = "bar">
         <a class = "header" href = "index.html">Home</a>
         <a class = "header" href = "team.html">Team</a>
         <a class = "header" href = "resources.html">Resources</a>
         <a class = "header" href = "calendar.html">Calendar</a>
+        <a class = "header" href = "sponsors.html">Sponsor</a>
+        <a class = "header" href = "gallery.html">Gallery</a>
     </header>
     <br><br><br><br><br><br>
     <h1>Vestal Science Olympiad</h1>
-    <p>
+    <p class = "body">
       Welcome to Vestal Science Olympiad!
     </p>
     
