--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>
       Vestal Science Olympiad
-    
+    <link rel="stylesheet" href="style.css">
     </title>
   </head>
   <body>
