--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
   <head>
     <title>
       Vestal Science Olympiad
-    <link rel = "stylesheet" href = "style.css">
     </title>
+    <link rel = "stylesheet" href = "style.css">
   </head>
   <body>
     <header class = "bar">
@@ -17,7 +17,11 @@
     <br><br><br><br><br><br>
     <h1>Vestal Science Olympiad</h1>
     <p class = "body">
-      Welcome to Vestal Science Olympiad!
+      Welcome to Vestal Science Olympiad's Official Website!
+    <br>
+      Science Olympiad is prestigious a nationwide K-12 Science Competiton. Each year, it runs 23 events with topics ranging from physics to astrophysics.
     </p>
+    <footer class = "bar2">
+    </footer>
   </body>
 </html>
