--- a/team.html
+++ b/team.html
@@ -17,9 +17,7 @@
     <br><br><br><br><br><br>
     <h1>Vestal Science Olympiad</h1>
     <p class = "body">
-      Welcome to Vestal Science Olympiad's Official Website!
-    <br>
-      Science Olympiad is prestigious a nationwide K-12 Science Competiton. Each year, it runs 23 events with topics ranging from physics to astrophysics.
+      Each year, we run 2 teams, Green and Gold. We have 6 captains.
     </p>
     <footer class = "bar2">
     </footer>
