--- a/team.html
+++ b/team.html
@@ -17,7 +17,7 @@
     <br><br><br><br><br><br>
     <h1>Vestal Science Olympiad</h1>
     <p class = "body">
-      Each year, we run 2 teams, Green and Gold. There are 6 captains: 5 senior and junior captains, and 1 honorary captain.
+      Each year, we run 2 teams, Green and Gold. Our team is headed by 3 advisers. There are 6 captains: 5 senior and junior captains, and 1 honorary captain. Check out their bios below! 
       
     </p>
     <footer class = "bar2">
