--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
         <a class = "header" href = "gallery.html">Gallery</a>
     </header>
     <br><br><br><br><br><br>
-    <h1>Vestal Science Olympiad</h1>
-    <p class = "body">
-      Welcome to Vestal Science Olympiad's Official Website!
-    <br>
-      Science Olympiad is prestigious a nationwide K-12 Science Competiton. Each year, it runs 23 events with topics ranging from physics to astrophysics.
-    </p>
+    <div class = "body">
+      <h1>Vestal Science Olympiad</h1>
+      <p class = "body">
+        Welcome to Vestal Science Olympiad's Official Website!
+      <br>
+        Science Olympiad is prestigious a nationwide K-12 Science Competiton. Each year, it runs 23 events with topics ranging from physics to astrophysics.
+      </p>
+    </div>
     <footer class = "bar2">
     </footer>
   </body>
