--- a/team.html
+++ b/team.html
@@ -15,11 +15,12 @@
         <a class = "header" href = "gallery.html">Gallery</a>
     </header>
     <br><br><br><br><br><br>
-    <h1>Vestal Science Olympiad</h1>
-    <p class = "body">
-      Each year, we run 2 teams, Green and Gold. Our team is headed by 3 advisers. There are 6 captains: 5 senior and junior captains, and 1 honorary captain. Check out their bios below! 
-      
-    </p>
+    <div class = "body">
+      <h1>Vestal Science Olympiad</h1>
+      <p class = "body">
+        Each year, we run 2 teams, Green and Gold. Our team is headed by 3 advisers. There are 6 captains: 5 senior and junior captains, and 1 honorary captain. Check out their bios below!
+      </p>
+    </div>
     <footer class = "bar2">
     </footer>
   </body>
