--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <br><br><br><br><br><br>
     <div class = "body">
       <h1>Vestal Science Olympiad</h1>
-      <p class = "body">
+      <p class = "inner">
         Welcome to Vestal Science Olympiad's Official Website!
       <br>
         Science Olympiad is prestigious a nationwide K-12 Science Competiton. Each year, it runs 23 events with topics ranging from physics to astrophysics.
