--- a/resources.html
+++ b/resources.html
@@ -1,1 +1,25 @@
-
+<html>
+  <head>
+    <title>
+      Vestal Science Olympiad
+    </title>
+    <link rel = "stylesheet" href = "style.css">
+  </head>
+  <body>
+    <header class = "bar">
+        <a class = "header" href = "index.html">Home</a>
+        <a class = "header" href = "team.html">Team</a>
+        <a class = "header" href = "resources.html">Resources</a>
+        <a class = "header" href = "calendar.html">Calendar</a>
+        <a class = "header" href = "sponsors.html">Sponsor</a>
+        <a class = "header" href = "gallery.html">Gallery</a>
+    </header>
+    <br><br><br><br><br><br>
+    <h1>Vestal Science Olympiad</h1>
+    <p class = "inner">
+      Below are our resources!
+    </p>
+    <footer class = "bar2">
+    </footer>
+  </body>
+</html>
