--- a/index.html
+++ b/index.html
@@ -19,11 +19,15 @@
       <h1>Vestal Science Olympiad</h1>
       <p class = "inner">
         Welcome to Vestal Science Olympiad's Official Website!
-      <br>
-        Science Olympiad is prestigious a nationwide K-12 Science Competiton. Each year, it runs 23 events with topics ranging from physics to astrophysics.
       </p>
     </div>
     <footer class = "bar2">
+      <ul class = footlinks>
+        <li>Sponsors:</li>
+        <li>Visions Federal Credit Union</li>
+        <li>Links:</li>
+        <li>Instagram</li>
+      </ul>
     </footer>
   </body>
 </html>
