--- a/resources.html
+++ b/resources.html
@@ -19,7 +19,12 @@
     <p class = "inner">
       Below are our resources!
     </p>
-    <footer class = "bar2">
+    <footer class = "bar2"><ul class = footlinks>
+        <li>Sponsors:</li>
+        <li>Visions Federal Credit Union</li>
+        <li>Links:</li>
+        <li>Instagram</li>
+      </ul>
     </footer>
   </body>
 </html>
