--- a/team.html
+++ b/team.html
@@ -19,7 +19,12 @@
     <p class = "inner">
       Each year, we run 2 teams, Green and Gold. Our team is headed by 3 advisers. There are 6 captains: 5 senior and junior captains, and 1 honorary captain. Check out their bios below!
     </p>
-    <footer class = "bar2">
+    <footer class = "bar2"><ul class = footlinks>
+        <li>Sponsors:</li>
+        <li>Visions Federal Credit Union</li>
+        <li>Links:</li>
+        <li>Instagram</li>
+      </ul>
     </footer>
   </body>
 </html>
