--- a/team.html
+++ b/team.html
@@ -22,11 +22,14 @@
     <br><br><br><br><br><br>
     <br><br><br><br><br><br>
     <br><br><br><br><br><br>
-    <footer class = "bar2"><ul class = footlinks>
+    <footer class = "bar2">
+      <ul class = "footlinks" id = "1">
         <li>Sponsors:</li>
         <li>Visions Federal Credit Union</li>
+      </ul>
+      <ul class = "footlinks" id = "2">
         <li>Links:</li>
-        <li>Instagram</li>
+        <li></li>Instagram</li>
       </ul>
     </footer>
   </body>
