--- a/team.html
+++ b/team.html
@@ -7,11 +7,11 @@
   </head>
   <body>
     <header class = "bar">
-        <a class = "header" href = "index.html">Home</a>
-        <a class = "header" href = "team.html">Team</a>
-        <a class = "header" href = "resources.html">Resources</a>
-        <a class = "header" href = "calendar.html">Calendar</a>
-        <a class = "header" href = "sponsors.html">Sponsor</a>
+        <a class = "header" href = "index.html">Home</a>|
+        <a class = "header" href = "team.html">Team</a>|
+        <a class = "header" href = "resources.html">Resources</a>|
+        <a class = "header" href = "calendar.html">Calendar</a>|
+        <a class = "header" href = "sponsors.html">Sponsor</a>|
         <a class = "header" href = "gallery.html">Gallery</a>
     </header>
     <br><br><br><br><br>
