--- a/team.html
+++ b/team.html
@@ -12,7 +12,7 @@
         <a class = "header" href = "resources.html">Resources</a>
         <a class = "header" href = "calendar.html">Calendar</a>
         <a class = "header" href = "sponsors.html">Sponsor</a>
-        <a class = "header" href = "gallery.html">Gallery</a>
+        <a class = "header" href = "gallery.html" id = "end">Gallery</a>
     </header>
     <br><br><br><br><br>
     <h1>Vestal Science Olympiad</h1>
