--- a/resources.html
+++ b/resources.html
@@ -29,7 +29,7 @@
       </ul>
       <ul class = "footlinks" id = "2">
         <li>Links:</li>
-        <li></li>Instagram</li>
+        <li>Instagram</li>
       </ul>
     </footer>
   </body>
