--- a/team.html
+++ b/team.html
@@ -19,9 +19,9 @@
     <p class = "inner">
       Each year, we run 2 teams, Green and Gold. Our team is headed by 3 advisers. There are 6 captains: 5 senior and junior captains, and 1 honorary captain. Check out their bios below!
     </p>
-    <div class = "banner" id = "advisors"><p class = "person">Ms. Pointer</p><p class = "person">Mr. Brembs</p><p class = "person">Ms. Chantry</p></div>
-    <div class = "banner" id = "captains1"><p class = "person">Marko Boyko</p><p class = "person">Keith Dai</p><p class = "person">Sofia Moroz</p></div>
-    <div class = "banner" id = "captains2"><p class = "person">Addison Shipp</p><p class = "person">Sindi Zhou</p><p class = "person">Delphin-Zinkin Fan</p></div>
+    <div class = "banner" id = "advisors"><div class = "person">Ms. Pointer</div><div class = "person">Mr. Brembs</div><div class = "person">Ms. Chantry</div></div>
+    <div class = "banner" id = "captains1"><div class = "person">Marko Boyko</div><div class = "person">Keith Dai</div><div class = "person">Sofia Moroz</div></div>
+    <div class = "banner" id = "captains2"><div class = "person">Addison Shipp</div><div class = "person">Sindi Zhou</div><div class = "person">Delphin-Zinkin Fan</div></div>
     <br><br><br><br><br><br>
     <br><br><br><br><br><br>
     <br><br><br><br><br><br>
