--- a/team.html
+++ b/team.html
@@ -21,7 +21,7 @@
     </p>
     <div class = "banner" id = "advisors"><div class = "person">Ms. Pointer</div><div class = "person">Mr. Brembs</div><div class = "person">Ms. Chantry</div></div>
     <div class = "banner" id = "captains1"><div class = "person" id = "senior">Marko Boyko</div><div class = "person" id = "senior">Keith Dai</div><div class = "person" id = "junior">Sofia Moroz</div></div>
-    <div class = "banner" id = "captains2"><div class = "person" id = "junior">Addison Shipp</div><div class = "person" id = "junior">Sindi Zhou</div><div class = "person" id = "honarary">Delphin-Zinkin Fan</div></div>
+    <div class = "banner" id = "captains2"><div class = "person" id = "junior">Addison Shipp</div><div class = "person" id = "junior">Sindi Zhou</div><div class = "person" id = "honorary">Delphin-Zinkin Fan</div></div>
     <br><br><br><br><br><br>
     <br><br><br><br><br><br>
     <br><br><br><br><br><br>
