--- a/team.html
+++ b/team.html
@@ -19,9 +19,9 @@
     <p class = "inner">
       Each year, we run 2 teams, Green and Gold. Our team is headed by 3 advisers. There are 6 captains: 5 senior and junior captains, and 1 honorary captain. Check out their bios below!
     </p>
-    <div class = "banner" id = "advisors"><div class = "person">Ms. Pointer</div><div class = "person">Mr. Brembs</div><div class = "person">Ms. Chantry</div></div>
-    <div class = "banner" id = "captains1"><div class = "person" id = "senior">Marko Boyko</div><div class = "person" id = "senior">Keith Dai</div><div class = "person" id = "junior">Sofia Moroz</div></div>
-    <div class = "banner" id = "captains2"><div class = "person" id = "junior">Addison Shipp</div><div class = "person" id = "junior">Sindi Zhou</div><div class = "person" id = "honorary">Delphin-Zinkin Fan</div></div>
+    <div class = "person">Ms. Pointer</div><div class = "person">Mr. Brembs</div><div class = "person">Ms. Chantry</div>
+    <div class = "person" id = "senior">Marko Boyko</div><div class = "person" id = "senior">Keith Dai</div><div class = "person" id = "junior">Sofia Moroz</div>
+    <div class = "person" id = "junior">Addison Shipp</div><div class = "person" id = "junior">Sindi Zhou</div><div class = "person" id = "honorary">Delphin-Zinkin Fan</div>
     <br><br><br><br><br><br>
     <br><br><br><br><br><br>
     <br><br><br><br><br><br>
