--- a/team.html
+++ b/team.html
@@ -20,8 +20,8 @@
       Each year, we run 2 teams, Green and Gold. Our team is headed by 3 advisers. There are 6 captains: 5 senior and junior captains, and 1 honorary captain. Check out their bios below!
     </p>
     <div class = "person" onclick = "showBio(1)">Ms. Pointer</div><div class = "person" onclick = "showBio(2)">Mr. Brembs</div><div class = "person" onclick = "showBio(3)">Ms. Chantry</div>
-    <div class = "person" id = "senior" onclick = "showBio(4)">Marko Boyko</div><div class = "person" id = "senior" onclick = "showBio(5)">Keith Dai</div><div class = "person" id = "junior" onclick = "showBio(6)">Sofia Moroz</div>
-    <div class = "person" id = "junior" onclick = "showBio(7)">Addison Shipp</div><div class = "person" id = "junior" onclick = "showBio(8)">Sindi Zhou</div><div class = "person" id = "honorary" onclick = "showBio(9)">Delphin-Zinkin Fan</div>
+    <div class = "person" id = "senior1" onclick = "showBio(4)">Marko Boyko</div><div class = "person" id = "senior2" onclick = "showBio(5)">Keith Dai</div><div class = "person" id = "junior1" onclick = "showBio(6)">Sofia Moroz</div>
+    <div class = "person" id = "junior2" onclick = "showBio(7)">Addison Shipp</div><div class = "person" id = "junior3" onclick = "showBio(8)">Sindi Zhou</div><div class = "person" id = "honorary" onclick = "showBio(9)">Delphin-Zinkin Fan</div>
     <br><br><br><br><br><br>
     <br><br><br><br><br><br>
     <br><br><br><br><br><br>
