--- a/team.html
+++ b/team.html
@@ -36,5 +36,14 @@
         <li>Instagram</li>
       </ul>
     </footer>
+    <script>
+      function showBio(n) {
+        if(n = 1) {
+          var i getElementById("senior1");
+          i.style.height = 50px;
+          break;
+        }
+      }
+    </script>
   </body>
 </html>
