--- a/team.html
+++ b/team.html
@@ -38,8 +38,8 @@
     </footer>
     <script>
       function showBio(n) {
-        if(n = 1) {
-          var i getElementById("senior1");
+        if (n == 1) {
+          var i = getElementById("senior1");
           i.style.height = 50px;
           break;
         }
