--- a/team.html
+++ b/team.html
@@ -38,14 +38,14 @@
     </footer>
     <script>
       function showBio(bok) {
-        var temp = document.querySelectorAll(".person");
+        var t = document.querySelectorAll(".person");
         for(var j = 0; j < temp.length; j++) {
-          temp[j].style.height = "auto";
+          t[j].style.height = "auto";
         }
         if (bok == 4) {
-          var i = document.getElementById("senior1");
+          t = document.getElementById("senior1");
         }
-        i.style.height = 50px;
+        t.style.height = 50px;
       }
     </script>
   </body>
