--- a/team.html
+++ b/team.html
@@ -41,9 +41,11 @@
         var t = document.querySelectorAll(".person");
         for(var j = 0; j < temp.length; j++) {
           t[j].style.height = "auto";
+          window.alert(j);
         }
         if (bok == 4) {
           t = document.getElementById("senior1");
+          window.alert(t);
         }
         t.style.height = 50px;
       }
