--- a/team.html
+++ b/team.html
@@ -39,7 +39,7 @@
     <script>
       function showBio(bok) {
         var t = document.querySelectorAll(".person");
-        for(var j = 0; j < temp.length; j++) {
+        for(var j = 0; j < t.length; j++) {
           t[j].style.height = "auto";
           window.alert(j);
         }
