--- a/team.html
+++ b/team.html
@@ -39,6 +39,7 @@
     <script>
       function showBio() {
         alert("TEST");
+        window.alert("TESTING");
         var t = document.querySelectorAll(".person");
         for(var j = 0; j < t.length; j++) {
           t[j].style.height = "auto";
