--- a/team.html
+++ b/team.html
@@ -45,7 +45,7 @@
           t[j].style.height = "auto";
           alert(j);
         }
-        this.style.height = 50px;
+        this.style.height = "50px";
       }
     </script>
   </body>
