--- a/team.html
+++ b/team.html
@@ -38,14 +38,12 @@
     </footer>
     <script>
       function showBio() {
-        alert("TEST");
-        window.alert("TESTING");
         var t = document.querySelectorAll(".person");
         for(var j = 0; j < t.length; j++) {
           t[j].style.height = "auto";
-          alert(j);
         }
         this.style.height = "50px";
+        this.style.hieght = 50px;
       }
     </script>
   </body>
