--- a/team.html
+++ b/team.html
@@ -42,7 +42,7 @@
         for(var j = 0; j < t.length; j++) {
           t[j].style.height = "auto";
         }
-        element.style.height = "50px";
+        element.classList.toggle("active");
       }
     </script>
   </body>
