--- a/team.html
+++ b/team.html
@@ -40,7 +40,7 @@
       function showBio(element) {
         var t = document.querySelectorAll(".person");
         for(var j = 0; j < t.length; j++) {
-          t[j].style.height = "auto";
+          t[j].classList.toggle("active");
         }
         element.classList.toggle("active");
       }
