--- a/team.html
+++ b/team.html
@@ -20,7 +20,7 @@
       Each year, we run 2 teams, Green and Gold. Our team is headed by 3 advisers. There are 6 captains: 5 senior and junior captains, and 1 honorary captain. Check out their bios below!
     </p>
     <div class = "person" onclick = "showBio(this)">Ms. Pointer</div><div class = "person" onclick = "showBio(this)">Mr. Brembs</div><div class = "person" onclick = "showBio(this)">Ms. Chantry</div>
-    <div class = "person" id = "senior1" onclick = "showBio(this)">Marko Boyko</div><div class = "person" id = "senior2" onclick = "showBio(this)">Keith Dai<image href = url(Keith_Dai.jpg)></image></div><div class = "person" id = "junior1" onclick = "showBio(this)">Sofia Moroz</div>
+    <div class = "person" id = "senior1" onclick = "showBio(this)">Marko Boyko</div><div class = "person" id = "senior2" onclick = "showBio(this)">Keith Dai<img src = "Keith_Dai.jpg"></img></div><div class = "person" id = "junior1" onclick = "showBio(this)">Sofia Moroz</div>
     <div class = "person" id = "junior2" onclick = "showBio(this)">Addison Shipp</div><div class = "person" id = "junior3" onclick = "showBio(this)">Sindi Zhou</div><div class = "person" id = "honorary" onclick = "showBio(this)">Delphin-Zinkin Fan</div>
     <br><br><br><br><br><br>
     <br><br><br><br><br><br>
