--- a/team.html
+++ b/team.html
@@ -17,7 +17,7 @@
     <br><br><br><br><br>
     <h1>Vestal Science Olympiad</h1>
     <p class = "inner">
-      Each year, we run 2 teams, Green and Gold. Our team is headed by 3 advisers. There are 6 captains: 5 senior and junior captains, and 1 honorary captain. Check out their bios below!
+      Each year, we run 2 teams, Green and Gold. Our team is headed by 3 advisers. There are 6 captains: 5 senior and junior captains, and 1 honorary captain. Click on their names below!
     </p>
     <div class = "person" onclick = "showBio(this)">Ms. Pointer</div><div class = "person" onclick = "showBio(this)">Mr. Brembs</div><div class = "person" onclick = "showBio(this)">Ms. Chantry</div>
     <div class = "person" id = "senior1" onclick = "showBio(this)">Marko Boyko</div><div class = "person" id = "senior2" onclick = "showBio(this)">Keith Dai<br><img src = "Keith_Dai.jpg"></img></div><div class = "person" id = "junior1" onclick = "showBio(this)">Sofia Moroz</div>
