--- a/team.html
+++ b/team.html
@@ -19,9 +19,9 @@
     <p class = "inner">
       Each year, we run 2 teams, Green and Gold. Our team is headed by 3 advisers. There are 6 captains: 5 senior and junior captains, and 1 honorary captain. Click on their names below!
     </p>
-    <div class = "person" onclick = "showBio(this)">Ms. Pointer</div><div class = "person" onclick = "showBio(this)">Mr. Brembs</div><div class = "person" onclick = "showBio(this)">Ms. Chantry</div>
-    <div class = "person" id = "senior1" onclick = "showBio(this)">Marko Boyko</div><div class = "person" id = "senior2" onclick = "showBio(this)">Keith Dai<br><img src = "Keith_Dai.jpg"></img></div><div class = "person" id = "junior1" onclick = "showBio(this)">Sofia Moroz</div>
-    <div class = "person" id = "junior2" onclick = "showBio(this)">Addison Shipp</div><div class = "person" id = "junior3" onclick = "showBio(this)">Sindi Zhou</div><div class = "person" id = "honorary" onclick = "showBio(this)">Delphin-Zinkin Fan</div>
+    <div class = "person" onclick = "showBio(this)">Ms. Pointer<br><img src = "Ms_Pointer.jpg"></img></div><div class = "person" onclick = "showBio(this)">Mr. Brembs<br><img src = "Mr_Brembs.png"></img></div><div class = "person" onclick = "showBio(this)">Ms. Chantry<br><img src = "Ms_Chantry.jpg"></img></div>
+    <div class = "person" id = "senior1" onclick = "showBio(this)">Marko Boyko<br><img src = "Marko_Boyko.png"></img></div><div class = "person" id = "senior2" onclick = "showBio(this)">Keith Dai<br><img src = "Keith_Dai.jpg"></img></div><div class = "person" id = "junior1" onclick = "showBio(this)">Sofia Moroz<br><img src = "Sofia_Moroz.jpg"></img></div>
+    <div class = "person" id = "junior2" onclick = "showBio(this)">Addison Shipp<br><img src = "Addison_Shipp.jpg"></img></div><div class = "person" id = "junior3" onclick = "showBio(this)">Sindi Zhou<br><img src = "Sindi_Zhou.png"></img></div><div class = "person" id = "honorary" onclick = "showBio(this)">Delphin-Zinkin Fan<br><img src = "Delphine-Zinkin_Fan.png"></img></div>
     <br><br><br><br><br><br>
     <br><br><br><br><br><br>
     <br><br><br><br><br><br>
