--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     <div class = "body">
       <h1>Vestal Science Olympiad</h1>
       <p class = "inner">
-        Welcome to Vestal Science Olympiad's Official Website!
+        Welcome to the NEW Vestal Science Olympiad's Official Website!
+
+        The Vestal Science Olympiad was founded around 2000s, and currently consists of 40+ members and 2 competing teams, A and B respectively. 
       </p>
     </div>
     <br><br><br><br><br><br>
