--- a/index.html
+++ b/index.html
@@ -20,7 +20,13 @@
       <p class = "inner">
         Welcome to the NEW Vestal Science Olympiad's Official Website!
 
-        The Vestal Science Olympiad was founded around 2000s, and currently consists of 40+ members and 2 competing teams, A and B respectively. 
+        The Vestal Science Olympiad was founded around ~1997-1998, and currently consists of 40+ members and 2 competing teams, A and B respectively. 
+      </p>
+      <p class = "inner">
+        Science Olympiad is a nationwide competition between schools in the varying fields of science. Students engage in different events in the fields of biology, chemistry, earth science, engineering, and physics to compare their knowledge and creativity in the application of skills. These events range from simple tests and labs to the testing of a product constructed by the students.  The Vestal Science Olympiad Team is a prestigious team located in the southern tier region. For the last 23 years, this team has been winning the local regional tournament and advancing onto the state tournament. The team has never made an appearance at the national tournament with 4th place being the highest place in history. However, it is our goal one day to advance to the national tournament and with hard work and dedication, anything is possible! The Vestal Science Olympiad Team runs two competitive team, Green and Gold that both continue at the regional competition. Selection for each team will be based upon grade level, attendance, and previous experience. We meet every Thursday after school in the Earth Science rooms. We are coached by the finest teachers in Vestal, Ms. Pointer, Mr. Brembs, and Mr. Rockhill. 
+
+
+Although many people may tend to think otherwise (especially due to its name), Science Olympiad is a cool activity. You get to build machines that can do all sorts of things, from launching ping-pong balls with the dropping of a quarter, to building a sideways tower that holds a large load of sand while itself having a low mass, and even vehicles that move an predetermined distance, which is unknown until the day of the competition. You can also take a shot at seeing how well you can do in a lab situation, or how much you know in a certain field. Our team always finds itself having some sort of fun, be it with the Van der Graaf generator, screwy chemical reactions, or just getting ticked off at the last minute. Goofing off as well as the usual craziness plague us persistently, but somehow, in the end, we come through alive. You will meet dozens of new people and cherish these memories your whole life! 
       </p>
     </div>
     <br><br><br><br><br><br>
